tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/semicolon-checked-asm.wyst
module semicolon_checked_asm

fn invalid() {
    asm {
        nop;
    }
}
